--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
   }
 }
 
-/* body { */
-/* color: rgb(var(--foreground-rgb));  */
-/* padding: 1rem;
-} */
+body {
+  /* color: rgb(var(--foreground-rgb)); */
+  height: 100vh;
+}
